--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 	<body>
 
-		<video autoplay loop id="video">
+		<video autoplay muted loop id="video">
 		    <source src="assets/videobg.mp4" type="video/mp4">
+		   	Your browser does not support the video tag.
 		</video>
 
 	</body>
